--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SongBytesApp">
-        <activity android:name=".SongsActivity"></activity>
+        <activity android:name=".AddSongActivity"></activity>
+        <activity android:name=".SongsActivity" />
         <activity android:name=".AdminActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
