--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SongBytesApp">
-        <activity android:name=".PlaySongActivity"></activity>
+        android:theme="@style/AppTheme">
+        <activity android:name=".PlaySongActivity" />
         <activity android:name=".AddSongActivity" />
         <activity android:name=".SongsActivity" />
         <activity android:name=".AdminActivity" />
